Ignore case when filtering triggered params